--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="./stylesheets/css/master.css">
   </head>
   <body>
-
+    <div class="background">
+      <img src="../dog-party/images/park.jpg" alt="">
+    </div>
+    
   </body>
 </html>
